[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copra"]


[project]
name = "copra-theorem-prover"
version = "1.1.11"
authors = [
  { name="Amitayush Thakur", email="amitayush@utexas.edu" },
]
description = "Python library for running proof search using CoPra"
readme = "README.md"
requires-python = ">=3.9, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "itp-interface>=1.1.12",
    "openai==1.69.0",
    "tiktoken==0.4.0",
    "gradio==3.48.0",
    "sentencepiece==0.1.99",
    "spaces==0.16.1",
    "transformers==4.48.0",
    "boto3==1.38.14"
]

[project.urls]
Homepage = "https://github.com/trishullab/copra"
Issues = "https://github.com/trishullab/copra/issues"

# [project.scripts]
# copra-install-prereqs = "copra.main.install:install_prereqs"
# copra-build-compcert = "copra.main.install:build_compcert"
# copra-build-minif2f-lean3 = "copra.main.install:build_minif2f_lean3"
# copra-build-minif2f-lean4 = "copra.main.install:build_minif2f_lean4"
