[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copra"]


[project]
name = "copra-theorem-prover"
version = "1.1.13"
authors = [
  { name="Amitayush Thakur", email="amitayush@utexas.edu" },
]
description = "Python library for running proof search using CoPra"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "itp-interface>=1.1.13",
    "openai==1.69.0",
    "tiktoken>=0.12.0",  # Updated: 0.4.0 incompatible with Python 3.14t, needs PyO3 0.23+ for free-threading
    "sentencepiece>=0.2.0",  # Updated: 0.1.99 lacks Python 3.14t wheels, 0.2.1 has cp314t support
    "transformers>=4.48.0",  # Relaxed: Allow updates for better numpy 2.0 compatibility
    "boto3==1.38.14",
    "numpy>=2.1.0",  # Added: Required for Python 3.14t free-threading support (PEP 703)
    "pydantic>=2.12.0",  # Added: Constrain to version with Python 3.14t support
    "huggingface-hub>=0.19.0,<0.32.0",  # Constrained: Versions >=0.32.0 require hf-xet which lacks Python 3.14t support
]

[project.optional-dependencies]
ui = [
    "gradio>=4.0.0,<5.50",  # Optional: UI features, requires huggingface-hub which pulls hf-xet (no Python 3.14t support yet)
]

[project.urls]
Homepage = "https://github.com/trishullab/copra"
Issues = "https://github.com/trishullab/copra/issues"

# [project.scripts]
# copra-install-prereqs = "copra.main.install:install_prereqs"
# copra-build-compcert = "copra.main.install:build_compcert"
# copra-build-minif2f-lean3 = "copra.main.install:build_minif2f_lean3"
# copra-build-minif2f-lean4 = "copra.main.install:build_minif2f_lean4"
