[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/copra"]


[project]
name = "copra-theorem-prover"
version = "1.1.17"
authors = [
  { name="Amitayush Thakur", email="amitayush@utexas.edu" },
]
description = "Python library for running proof search using CoPra"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "itp-interface==1.1.14",
    "openai>=1.99.1",
    "tiktoken>=0.12.0",  # Updated: 0.4.0 incompatible with Python 3.14t, needs PyO3 0.23+ for free-threading
    "sentencepiece>=0.2.0",  # Updated: 0.1.99 lacks Python 3.14t wheels, 0.2.1 has cp314t support
    "boto3==1.38.14",
    "numpy>=2.1.0",  # Added: Required for Python 3.14t free-threading support (PEP 703)
    "pydantic>=2.12.0",  # Added: Constrain to version with Python 3.14t support
    "transformers>=4.48,<4.54; python_version >= '3.14'",  # stays compatible with older hub
    "huggingface-hub>=0.30,<0.32; python_version >= '3.14'",  # stays compatible with older transformers
    # on <=3.12 (or <3.13), allow new stack
    "transformers>=4.56; python_version < '3.13'",
    "huggingface-hub>=0.34,<1.0; python_version < '3.13'",
    "requests>=2.32.0",
]

[project.optional-dependencies]
os_models = [
    "vllm>=0.11.0; python_version < '3.13'",  # Optional: Open-source model support with vLLM (requires Python ≤ 3.12)
]
ui = [
    "gradio>=4.0.0,<5.50",  # Optional: UI features, requires huggingface-hub which pulls hf-xet (no Python 3.14t support yet)
]

[project.urls]
Homepage = "https://github.com/trishullab/copra"
Issues = "https://github.com/trishullab/copra/issues"

# [project.scripts]
# copra-install-prereqs = "copra.main.install:install_prereqs"
# copra-build-compcert = "copra.main.install:build_compcert"
# copra-build-minif2f-lean3 = "copra.main.install:build_minif2f_lean3"
# copra-build-minif2f-lean4 = "copra.main.install:build_minif2f_lean4"
